--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,4 +20,10 @@ flutter:
   assets:
     - assets/images/curtain.png
     - assets/images/settings.png
+    - assets/images/runner up.png
+    - assets/images/second runner up.png
+    - assets/images/winner.png
+    - assets/images/boywithbluetick.png
+    - assets/images/red triangle.png
+    - assets/images/green triangle.png
 
